	DR 1207 	PR c++/49003 	* cp-tree.h (struct saved_scope): Add x_current_class_ptr, 	x_current_class_ref. 	(current_class_ptr, current_class_ref): Use them. 	* decl.c (build_this_parm): Handle getting the class type. 	* parser.c (cp_parser_late_return_type_opt): Set up 'this' 	for use within the trailing return type.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@175671 138bc75d-0d04-0410-961f-82ee72b054a4